project assign fully functional

--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -301,7 +301,7 @@
                     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.0/jspdf.umd.min.js"></script>
 
                     <!-- Define the printing2() function after the jsPDF library is loaded -->
-                    <script>
+                    {{!-- <script>
                     function printing2() {
                         console.log("PRINTING ATTEMPT2")
 
@@ -324,7 +324,7 @@
                         // Save the PDF
                         doc.save("table.pdf");
                     }
-                    </script>
+                    </script> --}}
 
                     <!-- Call the printing2() function when the button is clicked -->
                     {{!-- <button onclick="printing2()" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Print</button> --}}
